--- a/public/mj/src/styles/parts/_home-page.scss
+++ b/public/mj/src/styles/parts/_home-page.scss
@@ -28,7 +28,7 @@
     border-radius: 50%;
     transition: transform 0.35s;
     &:hover {
-      transform: scale3d(0.90,0.90,1);
+      transform: scale3d(0.9, 0.9, 1);
     }
   }
   .author-name {
@@ -41,7 +41,7 @@
     color: $dark;
     font-weight: 700;
     &::after {
-      content: "";
+      content: '';
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
@@ -52,6 +52,11 @@
       border-radius: 100%;
       background-color: $body-color;
     }
+  }
+  .author-desc {
+    font-size: 115%;
+    // color: black;
+    // text-align: justify;
   }
   p {
     font-size: 16px;
@@ -77,7 +82,7 @@
     text-transform: uppercase;
     text-align: center;
     &::before {
-      content: "";
+      content: '';
       display: block;
       height: 2px;
       width: calc(50% - 48px);
@@ -88,7 +93,7 @@
       background-color: $body-color;
     }
     &::after {
-      content: "";
+      content: '';
       display: block;
       height: 2px;
       width: calc(50% - 48px);
@@ -143,11 +148,11 @@ footer {
   min-height: 11rem;
   border-radius: 10px;
   overflow: hidden;
-  transition: all .3s ease;
-  box-shadow: 0 1px 1px 0 rgba(31, 35, 46, .15);
+  transition: all 0.3s ease;
+  box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
   &:hover {
     transform: translate(0px, -2px);
-    box-shadow: 0 15px 45px -10px rgba(10, 16, 34, .2);
+    box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2);
   }
 
   .post-thumbnail {
@@ -181,11 +186,12 @@ footer {
   }
 }
 
-a.older-posts, a.newer-posts {
+a.older-posts,
+a.newer-posts {
   font-size: 18px;
   display: inline-block;
   color: $body-color;
-  transition: transform .2s;
+  transition: transform 0.2s;
 }
 
 a.older-posts:hover {
