--- a/public/mj/src/styles/parts/_post-page.scss
+++ b/public/mj/src/styles/parts/_post-page.scss
@@ -25,8 +25,8 @@
 .page-cover-image {
   position: relative;
   padding: 0;
-  margin: 0;
-  max-height: 500px;
+  margin: auto;
+  max-width: 30%;
   background-color: $lightgray;
   overflow: hidden;
   figure {
@@ -55,7 +55,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   padding-bottom: 30px;
-  margin: 30px 0  ;
+  margin: 30px 0;
   border-bottom: 1px solid $dark-gray;
   .page-share {
     margin-bottom: 10px;
@@ -69,7 +69,7 @@
       margin-left: 5px;
       color: $dark-blue;
       font-size: 12px;
-      transition: background-color .3s;
+      transition: background-color 0.3s;
       &:first-child {
         margin-left: 0;
       }
